--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 				<header>
 					<span class="image avatar"><img src="images/passport_photograph.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Abdul khadar</a></h1>
-					<p>Data Driven solution developer<br />
-					Senior Consultant at CAPCO Technologies <br/>
+					<p>Data Driven solution developer</br>
+					Senior Consultant at CAPCO Technologies </br>
 					I do Data Analysis and Machine learning </p>
 				</header>
 				<nav id="nav">
