--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 								<div class="container">
 									<header class="major">
 										<h2>About Me</h2>
-										<p>I am a Data Analyst equipped with latest technolgy to drive business solutions </p>
+										<p>I am a Data Analyst with more than 8 years of experience in Business intelligence and equipped with latest technolgy to drive business solutions </p>
 									</header>
-									<p>I delivered business reports on different domains like Real Estate and Financial Services</br>
+									<p>I have delivered business reports on different domains like Real Estate and Financial Services</br>
 Interested towards Data science and BlockChain Technologies</br>
 curious to learn and experiment </p>
 
